Changed title again

--- a/calc.html
+++ b/calc.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-   <title>suillizam's Advanced Calculator</title>
+   <title>ADM's Advanced Calculator</title>
 
 <script language=javascript type="text/javascript">
 
